<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_centerInParent="true"
        android:text="@string/city"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/current_temp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/feel_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_temp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/feel_temp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feel_temp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/time_stamp"
        android:textSize="30sp" />
</RelativeLayout>